Prevent :hover to override .active on mobile CSS stylesheet

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -2279,13 +2279,16 @@ h2 .rssicon{
 	.menusimple.menutap li:hover>ul{
 		display:none;
 	}
-	.menusimple.menutap li.hover{
+	.menusimple.menutap li.hover,
+	.menusimple.menutap li.active{
 		background-color:#2c6fad;
 	}
-	.menusimple.menutap li.hover>a{
+	.menusimple.menutap li.hover>a,
+	.menusimple.menutap li.active>a{
 		color:#fff;
 	}
-	.menusimple.menutap li.hover>ul{
+	.menusimple.menutap li.hover>ul,
+	.menusimple.menutap li.active>ul{
 		display:block;
 	}
 	.logo{
